# try-static-haskell

./: .gitignore  .stylish-haskell  CHANGELOG.md  Makefile  README.md  hie.yaml  my-template.cabal
.github/workflows/: ci.yml
app/: Main.hs
benchmark/: Main.hs
lib/: MyLib.hs
test/: MyLibSpec.hs
