cabal-version:   2.4
name:            my-template
version:         0.1.0.0
synopsis:        Project Template for Haskell
description:     See README for more info
homepage:        https://github.com/Hogeyama/haskell-template
bug-reports:     https://github.com/Hogeyama/haskell-template/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Hogeyama
maintainer:      Hogeyama <gan13027830@gmail.com>
copyright:       2021 Hogeyama
build-type:      Custom
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==8.6.5 || ==8.8.3 || ==8.10.1

custom-setup
  setup-depends:
    , base
    , Cabal
    , cabal-doctest
    , hspec

common common-options
  build-depends:
    , base  >=4.11.1.0
    , rio

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveLift
    DeriveTraversable
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns

library
  import:          common-options

  -- cabal-fmt: expand lib
  exposed-modules: MyLib
  hs-source-dirs:  lib

executable my-template
  import:         common-options
  main-is:        Main.hs
  build-depends:  my-template
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite spec
  import:             common-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test

  -- cabal-fmt: expand test -Spec -Doctests
  other-modules:      MyLibSpec
  main-is:            Spec.hs
  build-tool-depends: hspec-discover:hspec-discover -any

  if impl(ghc >=8.4)
    ghc-options: -Wno-missing-export-lists

  if impl(ghc >=8.8)
    ghc-options: -Wno-missing-deriving-strategies

  build-depends:
    , hspec
    , my-template

test-suite doctests
  import:         common-options
  type:           exitcode-stdio-1.0
  main-is:        Doctests.hs
  hs-source-dirs: test
  ghc-options:    -Wno-missing-import-lists
  build-depends:  doctest

  if impl(ghc >=8.4)
    ghc-options: -Wno-missing-export-lists

  if impl(ghc >=8.8)
    ghc-options: -Wno-missing-deriving-strategies

benchmark benchmark
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , gauge
    , my-template
